--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <title>M4 Challenge</title>
 </head>
 <body>
+  <div>
+    <h1> Open console to see Console Finances program</h1>
+  </div>
   <script src="index.js"></script>
 </body>
 </html>
